Remove viewport height from body class to repair overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@ body {
             rgba(0, 0, 0, 0.7)), url('../images/cover.jpg') no-repeat, center, center, fixed;
     background-size: cover;
     background-position: center;
-    height: 100vh;
     margin: 0 auto;
     font-size: 16px;
 }
@@ -36,10 +35,11 @@ h1 {
 
 .navbar-brand {
     font-family: 'Trajan-Pro-3', serif;
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
     text-transform: uppercase;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
+    letter-spacing: 1px;
 }
 
 .nav-link {
@@ -80,11 +80,12 @@ h1 {
 
 /*-------------------------- Multiple Choice Questions */
 
-.answer-column {
+div.answer-column {
     font-family: 'Futura-PT', sans-serif;
-    background-color: rgba(94, 8, 8, .7);
+    background: rgba(94, 8, 8, .7);
     text-align: center;
     padding-top: 30px;
+    overflow: hidden;
 }
 
 .buttons {
@@ -215,6 +216,7 @@ img {
 @media only screen and (min-width: 768px) {
     .quiz-column {
         text-align: center;
+        overflow: hidden;
         height: 100vh;
     }
 
@@ -238,9 +240,7 @@ img {
 
     .answer-column {
         height: 100vh;
-        font-family: 'Futura-PT', sans-serif;
-        background-color: rgba(94, 8, 8, .6);
-        text-align: center;
+        overflow: hidden;
     }
 
     #progress {
